lync/tests/fails/if_cond_branches_do_not_unify.scm
(define f
  (lambda ()
    (if true 2 false)))
